--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 * @Author: Ben Kalish
 * @Date:   2020-08-04 16:06:51
 * @Last Modified by:   benjaminkalish
-* @Last Modified time: 2020-08-24 17:39:12
+* @Last Modified time: 2020-10-06 21:29:19
 */
 
 
@@ -48,8 +48,8 @@ div[class*="container"] {
 .navbar-container {
 	position: fixed;
 	z-index: 1000;
-	top: 5%;
-	right: 2%;
+	top: 2%;
+	left: 1%;
 
 	align-items: center;
 	justify-content: center;
