--- a/src/styles/fade-delay.scss
+++ b/src/styles/fade-delay.scss
@@ -31,8 +31,18 @@ html {
     background: #000000;
 }
 
+.katex > .katex-display {
+	font-size: 2em;
+}
+
 .navbar-container {
 	background: rgb(0, 50, 242);
+	opacity: 0.5;
+	font-family: "Futura Book";
+
+	&:hover {
+		opacity: 1;
+	}
 }
 
 .main-page-outer{
@@ -67,6 +77,11 @@ html {
 	width: 50%;
 }
 
+// @keyframes fadeline {
+// 	0% {bottom: 0; background: white; width: 73.5%;}
+// 	100% {bottom: 100; background: grey; width: 40%;}
+// }
+
 .faded-image-container {
 	display: flex;
 	position: relative;
@@ -86,6 +101,22 @@ html {
                 rgba(0,0,0,1) 100%
     );
 	}
+
+	// .animation-line {
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	right: 0;
+	// 	margin: 0 auto;
+	// 	width: 73.5%;
+	// 	height: 5px;
+	// 	background: white;
+	// 	z-index: 3;
+
+	// 	animation-name: fadeline;
+ //  		animation-duration: 1s;
+ //  		animation-delay: 500ms;
+	// }
 }
 
 .main-content-container, .main-section-container {
@@ -126,12 +157,14 @@ html {
 	display: flex;
 	flex-direction: row!important;
 	justify-content: space-between;
+	align-items: center;
 	width: 100%;
 }
 
 p {
 	margin-block-start: 0.5em;
 	margin-block-end: 0.5em;
+	line-height: 1.4em;
 }
 
 p, .example-label, .example-sublabel {
