--- a/src/styles/fade-delay.scss
+++ b/src/styles/fade-delay.scss
@@ -31,7 +31,7 @@ html {
     background: #000000;
 }
 
-.katex > .katex-display {
+.katex-display  > .katex {
 	font-size: 2em;
 }
 
@@ -77,10 +77,19 @@ html {
 	width: 50%;
 }
 
-// @keyframes fadeline {
-// 	0% {bottom: 0; background: white; width: 73.5%;}
-// 	100% {bottom: 100; background: grey; width: 40%;}
-// }
+@keyframes fadeline {
+	0% {height: 100%; width: 73.5%; border-bottom: 6px solid #eeeeee; opacity: 1;}
+	10%{opacity: 0.0;}
+	31.2%{opacity: 0.0;}
+	31.25%{opacity: 0.9;}
+	41.25%{opacity: 0.0;}
+	62.45%{opacity: 0.0;}
+	62.50%{opacity: 0.8;}
+	72.50%{opacity: 0.0;}
+	93.70%{opacity: 0.0;}
+	93.75%{opacity: 0.5;}
+	100% {height: 1%; width: 14%; border-bottom: 3px solid rgb(0, 50, 242); opacity: 0;}
+}
 
 .faded-image-container {
 	display: flex;
@@ -102,21 +111,37 @@ html {
     );
 	}
 
-	// .animation-line {
-	// 	position: absolute;
-	// 	bottom: 0;
-	// 	left: 0;
-	// 	right: 0;
-	// 	margin: 0 auto;
-	// 	width: 73.5%;
-	// 	height: 5px;
-	// 	background: white;
-	// 	z-index: 3;
+	.animation-line {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: 0 auto;
+		width: 73.5%;
+		height: 100%;
+		border-bottom: 5px solid #ffffff;
+		z-index: 3;
 
-	// 	animation-name: fadeline;
- //  		animation-duration: 1s;
- //  		animation-delay: 500ms;
-	// }
+		animation-name: fadeline;
+		animation-iteration-count: infinite;
+  		animation-duration: 4000ms;
+  		animation-timing-function: linear;
+
+	}
+
+	.animation-line.two{
+		animation-delay: 1000ms;
+	}
+
+	.animation-line.three{
+		// animation-delay: 1000ms;
+		animation-delay: 2000ms;
+	}
+
+	.animation-line.four{
+		animation-delay: 3000ms;
+	}
 }
 
 .main-content-container, .main-section-container {
