--- a/src/styles/fade-delay.scss
+++ b/src/styles/fade-delay.scss
@@ -78,17 +78,19 @@ html {
 }
 
 @keyframes fadeline {
-	0% {height: 100%; width: 73.5%; border-bottom: 6px solid #eeeeee; opacity: 1;}
-	10%{opacity: 0.0;}
-	31.2%{opacity: 0.0;}
-	31.25%{opacity: 0.9;}
-	41.25%{opacity: 0.0;}
-	62.45%{opacity: 0.0;}
-	62.50%{opacity: 0.8;}
-	72.50%{opacity: 0.0;}
-	93.70%{opacity: 0.0;}
-	93.75%{opacity: 0.5;}
-	100% {height: 1%; width: 14%; border-bottom: 3px solid rgb(0, 50, 242); opacity: 0;}
+	0% { border-color:#eeeeee;}
+	// 10%{opacity: 0.0;}
+	// 31.2%{opacity: 0.0;}
+	// 31.25%{opacity: 0.9;}
+	// 41.25%{opacity: 0.0;}
+	// 62.45%{opacity: 0.0;}
+	// 62.50%{opacity: 0.8;}
+	// 72.50%{opacity: 0.0;}
+	// 93.70%{opacity: 0.0;}
+	// 93.75%{opacity: 0.5;}
+	// 100% {height: 1%; width: 14%; border-bottom: 3px solid rgb(0, 50, 242); opacity: 0;}
+	80% { border-color:rgb(0, 50, 242); opacity: 0;}
+	100% { border-color:rgb(0, 50, 242); opacity: 0;}
 }
 
 .faded-image-container {
@@ -114,33 +116,45 @@ html {
 	.animation-line {
 		position: absolute;
 		top: 0;
-		bottom: 0;
 		left: 0;
 		right: 0;
 		margin: 0 auto;
 		width: 73.5%;
 		height: 100%;
-		border-bottom: 5px solid #ffffff;
+		border-bottom: 5px solid #eeeeee;
 		z-index: 3;
 
 		animation-name: fadeline;
 		animation-iteration-count: infinite;
-  		animation-duration: 4000ms;
-  		animation-timing-function: linear;
+  		animation-duration: 1600ms;
+  		animation-timing-function: ease-out;
+  		// animation-fill-mode: backwards;
 
 	}
 
 	.animation-line.two{
-		animation-delay: 1000ms;
+		animation-delay: 400ms;
+		height: 59%;
+		width: 49%;
+		border-bottom: 4px solid #eeeeee;
+		opacity: 0.8;
 	}
 
 	.animation-line.three{
 		// animation-delay: 1000ms;
-		animation-delay: 2000ms;
+		animation-delay: 800ms;
+		height: 26.4%;
+		width: 29%;
+		border-bottom: 3px solid #eeeeee;
+		opacity: 0.6;
 	}
 
 	.animation-line.four{
-		animation-delay: 3000ms;
+		animation-delay: 1200ms;
+		height: 5%;
+		width: 17%;
+		border-bottom: 2px solid #eeeeee;
+		opacity: 0.4;
 	}
 }
 
