--- a/src/styles/fade-delay.scss
+++ b/src/styles/fade-delay.scss
@@ -27,22 +27,32 @@
   font-style: italic;
 }
 
+$fdblue: rgb(0, 50, 242);
+
 html {
     background: #000000;
 }
 
 .katex-display  > .katex {
 	font-size: 2em;
+
+	@media only screen and (max-width: 500px) {
+		font-size: 1.5em;
+	}
 }
 
 .navbar-container {
-	background: rgb(0, 50, 242);
+	background: $fdblue;
 	opacity: 0.5;
 	font-family: "Futura Book";
 
 	&:hover {
 		opacity: 1;
 	}
+}
+
+.bm-icon-outer-container {
+	background: $fdblue;
 }
 
 .main-page-outer{
@@ -102,9 +112,9 @@ html {
 	// 72.50%{opacity: 0.0;}
 	// 93.70%{opacity: 0.0;}
 	// 93.75%{opacity: 0.5;}
-	// 100% {height: 1%; width: 14%; border-bottom: 3px solid rgb(0, 50, 242); opacity: 0;}
-	80% { border-color:rgb(0, 50, 242); opacity: 0;}
-	100% { border-color:rgb(0, 50, 242); opacity: 0;}
+	// 100% {height: 1%; width: 14%; border-bottom: 3px solid $fdblue; opacity: 0;}
+	80% { border-color:$fdblue; opacity: 0;}
+	100% { border-color:$fdblue; opacity: 0;}
 }
 
 .faded-image-container {
@@ -211,7 +221,12 @@ html {
 	flex-direction: row!important;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 	width: 100%;
+
+	& > * {
+		margin: 0 auto;
+	}
 }
 
 p {
@@ -257,7 +272,7 @@ p, .example-label, .example-sublabel {
 	font-size: 24px;
 	margin-bottom: 32px;
 
-	color: rgb(0, 50, 242);
+	color: $fdblue;
 }
 
 .full-width-image {
