--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 * @Author: Ben Kalish
 * @Date:   2020-08-04 16:06:51
 * @Last Modified by:   benjaminkalish
-* @Last Modified time: 2020-10-12 14:28:17
+* @Last Modified time: 2020-10-12 19:19:50
 */
 
 
@@ -40,6 +40,14 @@ html {
 	background: #000000;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
+}
+
 
 div[class*="container"] {
 	display: flex;
@@ -49,10 +57,32 @@ div[class*="container"] {
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
-  width: 24px;
-  height: 24px;
+  width: 36px;
+  height: 36px;
   left: 24px;
   top: 24px;
+}
+
+.bm-icon-outer-container, .bm-icon-inner-container {
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	border-radius: 2px;
+}
+
+.bm-icon-outer-container {
+	padding: 2px;
+	background: linear-gradient(45deg,
+		// rgb(75, 180, 225), 2%,
+		rgb(37, 46, 210), 30%,
+		rgb(119, 0, 170),
+		rgb(189, 7, 89),
+		rgb(219, 112, 32));
+}
+
+.bm-icon-inner-container {
+	background: black;
 }
 
 /* Color/shape of burger icon bars */
@@ -127,10 +157,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .menu-item {
-	font-size: 16px;
+	font-size: 24px;
 	font-weight: bold;
 	color: #FFFFFF;
-	margin: 5px 10px;
+	margin: 20px 10px;
 	outline: none;
 	border: none;
 	user-select: none;
