--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,18 @@
+/*
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
+
+
+
+/*@font-face {
+  font-family: "Ubuntu";
+  src: url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
+}
+
+@font-face {
+  font-family: "Teko, sans-serif";
+  src: url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
+}*/
 
 html {
   font-family: sans-serif;
@@ -209,7 +222,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: muli, serif;
+  /*font-family: muli, serif;*/
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
